--- a/code/05_threes_vs_two_table.Rmd
+++ b/code/05_threes_vs_two_table.Rmd
@@ -14,6 +14,8 @@ library(showtext)
 library(ggtext)
 library(htmltools)
 library(teamcolors)
+library(webshot2)
+
 
 ```
 
@@ -266,4 +268,5 @@ div(class = "table-wrap",
         tags$a(href="https://raw.githubusercontent.com/schmid07/NBA-R/main/plots/03/threes_twit.png", 
                target = "_blank", "Original Graph"))
   )
+
 ```
